--- a/R CODE/masters_thesis_testing_data_model.Rmd
+++ b/R CODE/masters_thesis_testing_data_model.Rmd
@@ -34,11 +34,12 @@ df = read.csv(file.path(inPath,"greenwich_eltham_imputed_school_hours_take2.csv"
 
 
 # get data set fields that I can use in the model. 
-df                    = df %>% select( NO2, MMYYYY, Year, Month, Week, Day, TimeHoursNum, lag.1.NO:lag.5.WSPD, X5amTo8amSlope.NO2.IMP:min.6.to.8.AM.WSPD.IMP )
+df                    = df %>% select( NO2, MMYYYY, Year, Month, Week, Day, TimeHoursNum, BP:WSPD, lag.1.NO:lag.5.WSPD, X5amTo8amSlope.NO2.IMP:min.6.to.8.AM.WSPD.IMP )
 response              = c('NO2')    
+```
 
 
-
+```{r}
 
 chosenVar             = c()
 dropIdx               = which(names(df) %in% c(response, chosenVar))
@@ -255,10 +256,15 @@ createDataFrame = function(df,responseCol,params){
   return(dfNew)
 }
 
+
+chosenVar             = c()
+
+
 for (i in 1:1){
 
 response        = c('NO2')
 results         = c()
+
 # get data set fields that I can use in the model. 
 dropIdx               = which(names(df) %in% c(response, chosenVar)) #chosenVar[length(chosenVar)])) #chosenVar))
 dfPredictors          = df[,-dropIdx]
@@ -266,7 +272,7 @@ predictorVariableList = names(dfPredictors)
 #length(predictorVariableList)
 
 
-# get all values in data frame that are remaining... 
+# get all values in data frame that are remaining and find all combinations of each --> i changed this to be '1' var added each time so combination no longer needed, but i keep for future ref and change the combination to '1' var.
 combn = data.frame(combn(predictorVariableList, 1))
 
 set.seed(123)
@@ -360,71 +366,3 @@ mae.xval.latest
 
 
 
-
-
-<!-- # Save the model -->
-<!-- model_path <- h2o.saveModel(object=df.train.dl, path=modelPath, force=TRUE) -->
-<!-- # print(model_path) -->
-<!-- # /tmp/mymodel/DeepLearning_model_R_1441838096933 -->
-
-<!-- # make a prediction here for train, test, validation set response -->
-<!-- predictions.train <- h2o.predict(df.train.dl, df.train.hex) -->
-<!-- predictions.test  <- h2o.predict(df.train.dl, df.test.hex) -->
-<!-- predictions.vali  <- h2o.predict(df.train.dl, df.vali.hex) -->
-
-<!-- # Export the data prediction for the testing and validation data sets -->
-<!-- outfilePath = file.path("~/Dropbox","NU","THESIS","DATASETS","RESULTS", "PREDICTIONS","ONE_HOUR_AHEAD_PREDICTIONS") -->
-<!-- filenameTrain = paste0('greenwich_eltham_',response[i],'_ann_train_1_hr_ahead.csv')   # TWO HOURS AHEAD, THREE HOURS, ETC... WILL BE THE NAMES OF THE NEW FILES -->
-<!-- filenameTest  = paste0('greenwich_eltham_',response[i],'_ann_test_1_hr_ahead.csv') -->
-<!-- filenameVali  = paste0('greenwich_eltham_',response[i],'_ann_vali_1_hr_ahead.csv') -->
-
-<!-- # EXPORT THE TEST DATA SET PREDICTIONS -->
-<!-- dfExportTrain = as.data.frame(h2o.cbind(predictions.train,df.train.hex)) -->
-<!-- dfExportTrain = dfExportTrain %>% filter(TimeHoursNum == '9') -->
-<!-- dfExportTrain$TimeKey1 = as.POSIXct(dfExportTrain$Time) + hours(1) -->
-<!-- dfExportTrain$TimeKey2 = as.POSIXct(dfExportTrain$Time) + hours(2) -->
-<!-- dfExportTrain$TimeKey3 = as.POSIXct(dfExportTrain$Time) + hours(3) -->
-<!-- dfExportTrain$TimeKey4 = as.POSIXct(dfExportTrain$Time) + hours(4) -->
-<!-- dfExportTrain$TimeKey5 = as.POSIXct(dfExportTrain$Time) + hours(5) -->
-<!-- keepIdx = which(names(dfExportTrain) %in% c(response[i], "predict","Time","TimeKey1","TimeKey2","TimeKey3","TimeKey4","TimeKey5")) -->
-<!-- dfExportTrain = dfExportTrain[,keepIdx] -->
-<!-- write.csv(dfExportTrain, file.path(outfilePath,filenameTrain))   # to here: we have exported a training file containing ALL the 9am predictions for ALL pollutant/meteo vars -->
-
-<!-- # EXPORT THE TEST DATA SET PREDICTIONS -->
-<!-- dfExportTest = as.data.frame(h2o.cbind(predictions.test,df.test.hex)) -->
-<!-- dfExportTest = dfExportTest %>% filter(TimeHoursNum == '9') -->
-<!-- dfExportTest$TimeKey1 = as.POSIXct(dfExportTest$Time) + hours(1) -->
-<!-- dfExportTest$TimeKey2 = as.POSIXct(dfExportTest$Time) + hours(2) -->
-<!-- dfExportTest$TimeKey3 = as.POSIXct(dfExportTest$Time) + hours(3) -->
-<!-- dfExportTest$TimeKey4 = as.POSIXct(dfExportTest$Time) + hours(4) -->
-<!-- dfExportTest$TimeKey5 = as.POSIXct(dfExportTest$Time) + hours(5) -->
-<!-- keepIdx = which(names(dfExportTest) %in% c(response[i], "predict","Time","TimeKey1","TimeKey2","TimeKey3","TimeKey4","TimeKey5")) -->
-<!-- dfExportTest = dfExportTest[,keepIdx] -->
-<!-- write.csv(dfExportTest, file.path(outfilePath,filenameTest))    # to here: we have exported a testing file containing ALL the 9am predictions for ALL pollutant/meteo vars -->
-
-<!-- # EXPORT THE VALIDATION DATA SET PREDICTIONS -->
-<!-- dfExportVali = as.data.frame(h2o.cbind(predictions.vali,df.vali.hex)) -->
-<!-- dfExportVali = dfExportVali %>% filter(TimeHoursNum == '9') -->
-<!-- dfExportVali$TimeKey1 = as.POSIXct(dfExportVali$Time) + hours(1) -->
-<!-- dfExportVali$TimeKey2 = as.POSIXct(dfExportVali$Time) + hours(2) -->
-<!-- dfExportVali$TimeKey3 = as.POSIXct(dfExportVali$Time) + hours(3) -->
-<!-- dfExportVali$TimeKey4 = as.POSIXct(dfExportVali$Time) + hours(4) -->
-<!-- dfExportVali$TimeKey5 = as.POSIXct(dfExportVali$Time) + hours(5) -->
-<!-- keepIdx = which(names(dfExportVali) %in% c(response[i], "predict","Time","TimeKey1","TimeKey2","TimeKey3","TimeKey4","TimeKey5")) -->
-<!-- dfExportVali = dfExportVali[,keepIdx] -->
-<!-- write.csv(dfExportVali, file.path(outfilePath,filenameVali))    # to here: we have exported a validation file containing ALL the 9am predictions for ALL pollutant/meteo vars -->
-
-<!-- # # CALC the MAE here -->
-<!-- dfExportTrain.MAE = mean(abs(dfExportTrain$predict - dfExportTrain$NO2)) -->
-<!-- #dfExportTrain.MAE # 4.129 / 4.178   => 3.140417 / 3.615189 / 3.251841  = with  5 lags included. -->
-<!-- #dfExportTrain.MAE # 4.129 / 4.178   => 3.312458 / 3.056598 / 2.760583 / 3.119739  = with  3 lags included. -->
-<!-- dfExportTrain.MAE # 4.129 / 4.178   => 3.367783 / 3.575584 / 3.677053  = with  3 lags included. -->
-<!-- # names(df) -->
-
-<!-- }  -->
-
-<!-- summary(df.train.dl) -->
-<!-- h2o.varimp(df.train.dl) -->
-
-
-<!-- ``` -->
